--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,51 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Acity Studio - Architecture Firm</title>
   <meta name="description"
-    content="Acity Studio architecture firm is home to the best architects in Delhi, Noida and Patna, India. The firm reinterprets India's architectural roots and Started in 2015 with a vision to redefine architecture" />
-  <meta name="keywords" content="Architecture, Interior, Home Decor, Rennovation, Construction" />
+    content="Transform your living and working spaces into timeless masterpieces with Acity Studio, the leading interior design firm serving Noida and Delhi. Our expert team combines creativity, functionality, and elegance to craft interiors that reflect your unique personality and style..." />
+  <meta name="keywords" 
+    content=
+      "
+      Interior Design
+      Home Decor
+      Luxury Interior Design
+      Interior Design Services
+      Home Styling
+      Interior Architecture
+      Modern Interiors
+      Living Room Design
+      Kitchen Renovation
+      Bedroom Interiors
+      Bathroom Design
+      Office Interior Design
+      Dining Room Styling
+      Kids' Room Decor
+      High-End Interior Design
+      Luxury Home Styling
+      Bespoke Interiors
+      Designer Furniture
+      Upscale Interior Design
+      Noida Delhi Interior Design
+      Interior Designers in Noida Delhi
+      Noida Delhi Home Renovation
+      " 
+  />
   <meta name="author" content="Abhishek Kumar" />
+  <meta name="impact-site-verification" value="6514814e-69f2-47e2-a155-d0b400da8d31" >
 </head>
 
 <body>
   <div id="root"></div>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16520452127">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16520452127">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'AW-16520452127');
-</script>
+    gtag('config', 'AW-16520452127');
+  </script>
 </body>
 
 </html>
